<resources>
    <string name="app_name">ProCows</string>
    <string name="fecha_cel">Fecha del Servicio (Día/Mes/Año)</string>
    <string name="fecha_prox">Próximo Celo</string>
    <string name="fecha_parto">Posible Parto</string>
    <string name="vac_nombre">Nombre de la Vaca</string>
    <string name="fecha">(Día/Mes/Año)</string>
    <string name="btn_save">Establecer Alarma</string>
    <string name="btn_text_alarma">Alarmas</string>
    <string name="btn_text_delete">Eliminar</string>
    <string name="btn_text_eleminar">Eliminar</string>
    <string name="detail_datecelo">Fecha del Servicio</string>
    <string name="detail_dateprocelo">Próximo Celo</string>
    <string name="detail_parto">Estimación de Parto</string>
    <string name="detail_hora">Hora de Alarma</string>


    <string name="empy">No se encuentran datos registrados</string>
    <string name="detail_description">Descripción</string>
    <string name="ipsum">En la mayoría de las granjas o fincas ganaderas el proceso de reproducción es uno de los factores que determinan el éxito o no de la actividad económica relacionada con la producción.\nTanto en sistemas de producción de ganado para carne como en sistemas inclinados a la producción lechera o doble propósito, la reproducción animal juega un importante papel, los productores persiguen la obtención del mayor número de cría por año, con los mejores pesos al destete y menor número de abortos y vacas vacías, es decir, una mayor eficiencia reproductiva. \nTeóricamente una vaca debería producir una cría por año, esto depende de factores internos como la genética del animal y de factores externos como la nutrición, el manejo sanitario y el mismo manejo reproductivo.\nLas vacas presentan celo cada 21 días, son hembras poliestricas estacionales. En las vacas la gestación dura 9 meses aproximadamente.</string>
    <string name="alert_title">Eliminar</string>
    <string name="alert_msg">¿Está seguro de eliminar este registro?</string>
    <string name="ok">Si</string>
    <string name="cancel">Cancelar</string>
    <string name="toro_nombre">Nombre del Toro</string>
    <string name="titulo_app">Control de Celos</string>
    <string name="detail_toro">Nombre del Toro</string>

</resources>
